crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__all_periodic__specifier.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Ok(
    (
        ",1",
        DateRule {
            kinds: [
                DateKind {
                    range: (
                        Date(
                            1,
                        ),
                        Date(
                            31,
                        ),
                    ),
                    periodic: DatePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
